fix: Set fixed width/height for announcements card to prevent text wrapping overflow in viewport shrink Additional change: Add all avatars needed for the dashboard

--- a/styles.css
+++ b/styles.css
@@ -166,15 +166,20 @@ body {
     border-radius: 8px;
     padding: 24px 30px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.08);
+    height: 220px;
+    width: 220px;
 }
-
-/* #announcements-section > div > div {
-
-} */
-
 
 #trending-section {
     border: 1px solid black;
     grid-row: 2 / 3;
     grid-column: 2 / 3;
+    padding-left: 10px;
+}
+
+#trending-section > div {
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    padding: 24px 30px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.08);
 }
